--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "proyecto-i": "file:"
   },
   "devDependencies": {
     "@types/connect-mongo": "^3.1.2",
