Refactors backend logic, updates UI, and adds environment enhancements
- Optimizes backend logic to support multiple persistence modes
  (MongoDB, file system, and memory).
- Refactors helper, middleware, and router imports for consistency.
- Introduces mode-specific start scripts in `package.json`.
- Enhances UI with updated layouts and improved user interactions:
  * Adjusts CSS for grid-based product listing and refined styling.
  * Adds admin controls to manage products dynamically.
- Implements Google sign-out in the navbar and email verification flow on registration.
- Adds support for environment-specific `.env` files in `.gitignore`.
- Improves error handling and feedback across user actions.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./index.js ",
-    "dev": "node --watch ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./index.js --mode prod",
+    "dev": "node --watch ./index.js --mode dev",
+    "test": "node --watch ./index.js --mode test",
+    "qa": "node --watch ./index.js --mode qa"
   },
   "author": "",
   "license": "ISC",
